[fix] wrap

--- a/style.css
+++ b/style.css
@@ -5,9 +5,8 @@ body {
 
 .elcontainer {
     display: flex;
-    flex: wrap;
-    width: 1000px;
-    height: 1000px;
+    flex-wrap: wrap;
+    max-width: 1000px;
     margin: 0 auto;
     border: solid 1px black;
 }
